--- a/doc/src/ts-time/OffsetDateTime.yaml
+++ b/doc/src/ts-time/OffsetDateTime.yaml
@@ -172,7 +172,7 @@ symbols:
           <p>For nullable objects, use static methods instead. Null and undefined are considered less than anything,
           except each other:</p>
           <pre>
-          const d1 = null;
+          const d1: %OffsetDateTime = null;
           const d2 = %OffsetDateTime.%parse("2022-02-15T18:30:15.226-02:00");
           %OffsetDateTime.%equal(d1, d2);     // false
           %OffsetDateTime.%isBeforeStatic(d1, d2);  // true
