--- a/doc/src/ts-time/ZonedDateTime.yaml
+++ b/doc/src/ts-time/ZonedDateTime.yaml
@@ -45,22 +45,21 @@ symbols:
           <pre>
           const zone    = %ZoneId.%ofOfZoneId("America/New_York");
           const instant = %Instant.%parseOfInstant("2022-06-14T00:00:00.000Z");
-          console.log(instant.%atZoneOfInstant(zone));           // "2022-06-13T19:00:00.000-05:00[America/New_York]"
+          console.log(instant.%atZoneOfInstant(zone));           // "2022-06-13T20:00:00.000-04:00[America/New_York]"
           </pre>
           It happens, because %ZonedDateTime preserves its %instant component in this case, not %dateTime:
           <pre>
-          console.log(instant.%atZoneOfInstant(zone).%instant);   // "2022-11-14T00:00:00.000Z"
-          console.log(instant.%atZoneOfInstant(zone).%dateTime);  // "2022-11-13T19:00:00.000"
+          console.log(instant.%atZoneOfInstant(zone).%instant);   // "2022-06-14T00:00:00.000Z"
+          console.log(instant.%atZoneOfInstant(zone).%dateTime);  // "2022-06-13T20:00:00.000"
           </pre></li>
           <li>Conversion from %LocalDateTime, on the contrary, preserves %dateTime component:
           <pre>
-          const dateTime = %LocalDateTime.%parseOfDateTime("2022-11-14T00:00:00.000");
-          console.log(dateTime.%atZoneOfDateTime(zone));          // "2022-11-14T00:00:00.000-05:00[America/New_York]"
-          console.log(dateTime.%atZoneOfDateTime(zone).%dateTime); // "2022-11-14T00:00:00.000"
-          console.log(dateTime.%atZoneOfDateTime(zone).%instant);  // "2022-11-14T05:00:00.000Z"
+          const dateTime = %LocalDateTime.%parseOfDateTime("2022-06-14T00:00:00.000");
+          console.log(dateTime.%atZoneOfDateTime(zone));          // "2022-06-14T00:00:00.000-04:00[America/New_York]"
+          console.log(dateTime.%atZoneOfDateTime(zone).%dateTime); // "2022-06-14T00:00:00.000"
+          console.log(dateTime.%atZoneOfDateTime(zone).%instant);  // "2022-06-14T04:00:00.000Z"
           </pre></li>
-          <li>%ZonedDateTime is the highest-level date/time presentation in ts-time, thus none of the conversions
-          listed above result in any data loss.</li>
+          <li>Conversion from %OffsetDateTime results in loss of the original offset.</li>
           </ul>
           <p>As opposed to Java API, there's no common way to get the current instance of %ZonedDateTime in ts-time,
           because ts-time doesn't have a concept of default time zone. Instead, you must get the current %Instant
@@ -143,10 +142,10 @@ symbols:
           const zonedDateTime  = %ZonedDateTime.%parse("2022-02-15T18:30:15.225-05:00[America/New_York]");
           const year           = zonedDateTime.%year;            // 2022
           const month          = zonedDateTime.%month;           // %FEBRUARY
-          const monthValue     = zonedDateTime.%month.%valueOfMonth;     // 6
+          const monthValue     = zonedDateTime.%month.%valueOfMonth;     // 2
           const dayOfMonth     = zonedDateTime.%dayOfMonth;      // 15
           const dayOfWeek      = zonedDateTime.%dayOfWeek;       // %TUESDAY
-          const dayOfWeekValue = zonedDateTime.%dayOfWeek.%valueOfDay; // 3
+          const dayOfWeekValue = zonedDateTime.%dayOfWeek.%valueOfDay; // 2
           const hour           = zonedDateTime.%hour;            // 18
           const minute         = zonedDateTime.%minute;          // 30
           const second         = zonedDateTime.%second;          // 15
@@ -190,38 +189,40 @@ symbols:
       compare:
         header: Compare
         text: |
-          <p>A common way to compare objects in ts-time is to call %equals, %isBefore, %isAfter, %compareTo methods:</p>
+          <p>A common way to compare objects in ts-time is to call %equals, %compareTo methods:</p>
           <pre>
           const d1 = %ZonedDateTime.%parse("2022-02-15T18:30:15.225-05:00[America/New_York]");
           const d2 = %ZonedDateTime.%parse("2022-02-15T18:30:15.226-05:00[America/New_York]");
           d1.%equals(d2);    // false
-          d1.%isBefore(d2);  // true
-          d1.%isAfter(d2);   // false
           d1.%compareTo(d2); // -1
           </pre>
-          <p>The objects are first compared by %instant, and then by %zone text identifier. If you want to ignore
-          %zone text identifier, compare a specific component instead: %instant or %dateTime.</p>
+          <p>The objects are first compared by %instant, and then by %zone text identifier.</p>
           <p>For nullable objects, use static methods instead. Null and undefined are considered less than anything,
           except each other:</p>
           <pre>
           const d1: %ZonedDateTime = null;
           const d2 = %ZonedDateTime.%parse("2022-02-15T18:30:15.226-05:00[America/New_York]");
-          %ZonedDateTime.%equal(d1, d2);     // false
-          %ZonedDateTime.%isBeforeStatic(d1, d2);  // true
-          %ZonedDateTime.%isAfterStatic(d1, d2);   // false
-          %ZonedDateTime.%compare(d1, d2);   // -1
+          %ZonedDateTime.%equal(d1, d2);   // false
+          %ZonedDateTime.%compare(d1, d2); // -1
+          </pre>
+          <p>As opposed to the majority of objects in ts-time, %ZonedDateTime doesn't have <b>isBefore</b> and
+          <b>isAfter</b> methods. You must explicitly specify which component you want to compare: %instant or
+          %dateTime.</p>
+          <pre>
+          const d1 = %ZonedDateTime.%parse("2022-02-15T18:30:15.225-05:00[America/New_York]");
+          const d2 = %ZonedDateTime.%parse("2022-02-15T20:30:15.226+01:00[Europe/Berlin]");
+          d1.%instant.%isBeforeOfInstant(d2.%instant);   // false
+          d1.%dateTime.%isBeforeOfDateTime(d2.%dateTime); // true
           </pre>
         references:
-          isBeforeStatic:
-            file: ts-time/ZonedDateTime
+          isBeforeOfInstant:
+            file: ts-time/Instant
             member: isBefore
-            static: true
             label: isBefore
-          isAfterStatic:
-            file: ts-time/ZonedDateTime
-            member: isAfter
-            static: true
-            label: isAfter
+          isBeforeOfDateTime:
+            file: ts-time/LocalDateTime
+            member: isBefore
+            label: isBefore
           compare:
             file: ts-time/ZonedDateTime
             member: compare
@@ -249,6 +250,14 @@ symbols:
           <pre>
           const d2 = zonedDateTime.%instant.%atZone(%UTC).%plusPeriod(%MONTH_PERIOD); // 23:00 on 28th of March, 2022, UTC
           </pre>
+          <p>If the date/time jumps over daylight saving borderline, the result will have a different offset:</p>
+          <pre>
+          const winterTime = %ZonedDateTime.%parse("2022-03-01T00:00:00.000+01:00[Europe/Berlin]");
+          const summerTime = winterTime.%plusPeriod(%Period.%ofMonths(3));
+          console.log(summerTime);            // "2022-06-01T00:00:00.000+02:00[Europe/Berlin]"
+          </pre>
+          <p>The same may happen in rare cases of historical time zone rule changes (i.e. regulations of local
+          governments).</p>
           <p>To add/subtract a %Duration, call %plusDuration/%minusDuration method:</p>
           <pre>
           const zonedDateTime = %ZonedDateTime.%parse("2022-02-15T18:30:15.225-05:00[America/New_York]");
@@ -290,6 +299,10 @@ symbols:
             file: ts-time/Period
             member: ofDays
             static: true
+          ofMonths:
+            file: ts-time/Period
+            member: ofMonths
+            static: true
           valueOfDayOfWeek:
             file: ts-time/DayOfWeek
             member: value
@@ -304,20 +317,20 @@ symbols:
           <p>You can convert %ZonedDateTime to other kinds of objects via its properties:</p>
           <pre>
           const zonedDateTime = %ZonedDateTime.%parse("2022-02-15T18:30:15.225-05:00[America/New_York]");
-          zonedDateTime.%instant;                   // To %Instant: 2022-02-15T20:30:15.225Z
+          zonedDateTime.%instant;                   // To %Instant: 2022-02-15T23:30:15.225Z
           zonedDateTime.%date;                      // To %LocalDate: 2022-02-15
           zonedDateTime.%time;                      // To %LocalTime: 18:30:15.225
           zonedDateTime.%dateTime;                  // To %LocalDateTime: 2022-02-15T18:30:15.225
           zonedDateTime.%instant.%atOffsetOfInstant(offset);  // To %OffsetDateTime in a given %ZoneOffset, preserving %instant component: 2022-02-16T03:30:15.225+04:00
           zonedDateTime.%dateTime.%atOffsetOfDateTime(offset); // To %OffsetDateTime in a given %ZoneOffset, preserving %dateTime component: 2022-02-15T18:30:15.225+04:00
-          zonedDateTime.%instant.%atZoneOfInstant(zone);      // To %ZonedDateTime with another %ZoneId, preserving %instant component: 2022-02-15T00:30:15.225+01:00[Europe/Berlin]
+          zonedDateTime.%instant.%atZoneOfInstant(zone);      // To %ZonedDateTime with another %ZoneId, preserving %instant component: 2022-02-16T00:30:15.225+01:00[Europe/Berlin]
           zonedDateTime.%dateTime.%atZoneOfDateTime(zone);     // To %ZonedDateTime with another %ZoneId, preserving %dateTime component: 2022-02-15T18:30:15.225+01:00[Europe/Berlin]
           </pre>
           <p>Please notice that all conversions result in a partial data loss (date, time, original time zone).</p>
           <p>You can as well convert %ZonedDateTime to a native JavaScript %Date:</p>
           <pre>
           const zonedDateTime = %ZonedDateTime.%parse("2022-02-15T18:30:15.225-05:00[America/New_York]");
-          zonedDateTime.%native;                    // %Date representing 18:30:15.225 on 15th of February, UTC-5
+          zonedDateTime.%native;                    // %Date representing 23:30:15.225 on 15th of February, 2022 (UTC)
           </pre>
           <p>Please notice that native %Date is always stored in UTC or local time zone, so you can see a different
           date/time when printing it as a string. It will be the same instant, just a different time zone.</p>
@@ -358,7 +371,7 @@ symbols:
           <p>Now you can construct an instance of %ZonedDateTimeFormatter in order to format arbitrary %ZonedDateTime
           instances:</p>
           <pre>
-          const formatter = %ZonedDateTimeFormatter.%ofPattern("dd.MMM''yy, hh:mm a, ('UTC'x, V)");
+          const formatter = %ZonedDateTimeFormatter.%ofPattern("dd.MMM''yy, hh:mm a ('UTC'x, V)");
           const zonedDateTime = %ZonedDateTime.%parse("2022-02-15T18:30:15.225-05:00[America/New_York]");
           formatter.%format(zonedDateTime); // "15.Feb'22, 06:30 PM (UTC-05, America/New_York)"
           </pre>
@@ -542,26 +555,6 @@ symbols:
           True if this zoned date/time is equal to %other, i.e. all components are equal.
           Null and undefined are only equal to each other. %%null
 
-      isBefore:
-        signature: |
-          (other: %ZonedDateTime): boolean
-        params:
-          other: Zoned date/time to compare to.
-        returns: |
-          True if this zoned date/time goes before %other.
-          The objects are first compared by instant, and then by zone text identifier.
-          Null and undefined go before anything, except each other. %%null
-
-      isAfter:
-        signature: |
-          (other: %ZonedDateTime): boolean
-        params:
-          other: Zoned date/time to compare to.
-        returns: |
-          True if this zoned date/time goes after %other.
-          The objects are first compared by instant, and then by zone text identifier.
-          Null and undefined go before anything, except each other. %%null
-
       plusDuration:
         signature: |
           (duration: %Duration): %ZonedDateTime
@@ -722,25 +715,3 @@ symbols:
         returns: |
           True if %x is equal to %y, i.e. all components are equal.
           Null and undefined are only equal to each other.
-
-      isBefore:
-        signature: |
-          (x: %ZonedDateTime, y: %ZonedDateTime): boolean
-        params:
-          x: One zoned date/time.
-          y: Another zoned date/time.
-        returns: |
-          True if %x goes before %y.
-          The objects are first compared by instant, and then by zone text identifier.
-          Null and undefined go before anything, except each other.
-
-      isAfter:
-        signature: |
-          (x: %ZonedDateTime, y: %ZonedDateTime): boolean
-        params:
-          x: One zoned date/time.
-          y: Another zoned date/time.
-        returns: |
-          True if %x goes after %y.
-          The objects are first compared by instant, and then by zone text identifier.
-          Null and undefined go before anything, except each other.
