--- a/doc/src/ts-time/errors.yaml
+++ b/doc/src/ts-time/errors.yaml
@@ -20,6 +20,9 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
+description: |
+  <div class="alert alert-info">Available since ts-time 0.2.2.</div>
+
 symbols:
   TemporalError:
     kind: class
